# tigon

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README-UIUC.md  README.md  bench_smallbank.cpp  bench_tatp.cpp  bench_tpcc.cpp  bench_ycsb.cpp  btreeolc_cxl_test.cpp  btreeolc_test.cpp  flake.nix  pseudo_code.cpp  rust-toolchain.toml
benchmark/smallbank/: Context.h  Database.h  Query.h  Random.h  Schema.h  Storage.h  Transaction.h  Workload.h
benchmark/tatp/: Context.h  Database.h  Query.h  Random.h  Schema.h  Storage.h  Transaction.h  Workload.h
benchmark/tpcc/: Context.h  Database.h  Query.h  Random.h  Schema.h  Storage.h  Transaction.h  Workload.h
benchmark/ycsb/: Context.h  Database.h  Query.h  Random.h  Schema.h  Storage.h  Transaction.h  Workload.h
common/: BufferedFileWriter.h  BufferedReader.h  CCHashTable.h  CCSet.h  CXLMemory.cpp  CXLMemory.h  CXLTransport.cpp  CXLTransport.h  CXL_EBR.cpp  CXL_EBR.h  ClassOf.h  DeferCode.h  Encoder.h  FixedString.h  FunctionTraits.h  Hash.h  HashMap.h  LockfreeQueue.h  MPSCRingBuffer.h  Message.h  MessagePiece.h  Operation.h  Percentile.h  Random.h  Serialization.h  Socket.h  SpinLock.h  StringPiece.h  ThreadPool.h  Time.cpp  Time.h  WALLogger.h  Zipf.h  atomic_offset_ptr.hpp
common/btree_olc/: BTreeOLC.cpp  BTreeOLC.h  EBR.h
common/btree_olc_cxl/: BTreeOLC_CXL.cpp  BTreeOLC_CXL.h  EBRCXL.h  EBR_CXL.h
core/: CXLTable.h  Context.h  ControlMessage.h  Coordinator.h  Defs.h  Delay.h  Dispatcher.h  Executor.h  Macros.h  Manager.h  Partitioner.h  SchemaDef.h  Table.cpp  Table.h  Worker.h
core/factory/: WorkerFactory.h
core/group_commit/: Executor.h  Manager.h
dependencies/cxlalloc/: cxlalloc.h
dependencies/kernel_module/: cxl_ivpci.ko  cxl_recover_meta
emulation/: 30-wired-template.network  40-wired-template.network  cxl-global.sh  etc_hosts_template  kill_experiments.sh  mkosi_postinst.sh  run_globals.sh  start_vm.sh  start_vms.sh  uncore_freq.py
emulation/host_setup/: cxl_global.sh
emulation/image/: make_vm_img.sh  mkosi.default
emulation/ivshmem/: README.md
emulation/ivshmem/ivshmem-host/: Cargo.toml
emulation/ivshmem/ivshmem-host/src/: client.rs  cmsg.rs  event_notifier.rs  lib.rs  server.rs  signal.rs
emulation/ivshmem/ivshmem-user/: Cargo.toml
emulation/ivshmem/ivshmem-user/data/: host-eventfd.csv  host-pipe.csv  vm-pci.csv
emulation/ivshmem/ivshmem-user/src/: bench_host.rs  bench_vm.rs  wait.rs
emulation/pwr/: pwr.py
emulation/vm_lib/: __init__.py  const.py  cpu.py  cpupin.py  gpu.py  ivshmem.py  mtrr.py  network.py  parsing.py  pci_parser.py  pci_scanner.py  qmp.py  run_command.py  start_vm.py  test_ivshmem.py  unset_driver_override.py
protocol/Aria/: Aria.h  AriaExecutor.h  AriaHelper.h  AriaManager.h  AriaMessage.h  AriaRWKey.h  AriaTransaction.h
protocol/Calvin/: Calvin.h  CalvinExecutor.h  CalvinHelper.h  CalvinManager.h  CalvinMessage.h  CalvinRWKey.h  CalvinTransaction.h
protocol/H-Store/: HStore.h  HStoreExecutor.h  HStoreHelper.h  HStoreMessage.h  HStoreTransaction.h
protocol/Pasha/: MigrationManager.cpp  MigrationManager.h  MigrationManagerFactory.h  Pasha.h  PashaExecutor.h  PashaHelper.h  PashaMessage.h  PashaRWKey.h  PashaTransaction.h  PolicyClock.h  PolicyEagerly.h  PolicyFIFO.h  PolicyLRU.h  PolicyNoMoveOut.h  PolicyOnDemandFIFO.h  SCCAllNTP.h  SCCManager.cpp  SCCManager.h  SCCManagerFacrtory.h  SCCNoOP.h  SCCNonTemporal.h  SCCWriteThrough.h
protocol/Silo/: Silo.h  SiloExecutor.h  SiloHelper.h  SiloMessage.h  SiloRWKey.h  SiloTransaction.h
protocol/SiloGC/: SiloGC.h  SiloGCExecutor.h  SiloGCMessage.h
protocol/Star/: Star.h  StarExecutor.h  StarManager.h  StarMessage.h  StarQueryNum.h
protocol/Sundial/: Sundial.h  SundialExecutor.h  SundialHelper.h  SundialMessage.h  SundialRWKey.h  SundialTransaction.h
protocol/SundialPasha/: MigrationPolicy.cpp  MigrationPolicy.h  PolicyEagerly.h  SundialPasha.h  SundialPashaExecutor.h  SundialPashaHelper.cpp  SundialPashaHelper.h  SundialPashaMessage.h  SundialPashaRWKey.h  SundialPashaTransaction.h
protocol/TwoPL/: TwoPL.h  TwoPLExecutor.h  TwoPLHelper.h  TwoPLMessage.h  TwoPLRWKey.h  TwoPLTransaction.h
protocol/TwoPLGC/: TwoPLGC.h  TwoPLGCExecutor.h  TwoPLGCMessage.h
protocol/TwoPLPasha/: TwoPLPasha.h  TwoPLPashaExecutor.h  TwoPLPashaHelper.cpp  TwoPLPashaHelper.h  TwoPLPashaMessage.h  TwoPLPashaRWKey.h  TwoPLPashaSCCNonTemporal.h  TwoPLPashaSCCWriteThrough.h  TwoPLPashaSCCWriteThroughNoSharedRead.h  TwoPLPashaTransaction.h
results/motor/: tpcc.csv  ycsb-0-0.7.csv  ycsb-100-0.7.csv  ycsb-50-0.7.csv  ycsb-95-0.7.csv
scripts/: common.sh  gc_lotus_mp_ycsb.py  migration_policy_stats.sh  parse_remote_txn_overhead.py  plot-tpcc-remote-txn-overhead.py  push_button.sh  remote_txn_overhead.sh  run-ci.sh  run.sh  run_all_cases.sh  run_all_exp.sh  run_hwcc_budget.sh  run_misc.sh  run_swcc.sh  run_tpcc.sh  run_ycsb.sh  setup.sh  utilities.sh
scripts/parse/: common.py  dump.py  parse.py  parse_all.py  parse_baseline.py  parse_end_to_end.py  parse_hwcc_budget.py  parse_macro.py  parse_micro.py  parse_migration_policy_stats.py  parse_swcc.py  parse_tpcc.py  parse_ycsb.py  visualization.ipynb
scripts/plot/: common.py  parse_migration_policy_stats.py  parse_remote_txn_overhead.py  plot-ycsb-remote-txn-overhead.py  plot.py  plot_all.sh  plot_baseline.py  plot_baseline_tpcc.py  plot_data_movement.py  plot_hwcc_budget.py  plot_macro.py  plot_macro_smallbank.py  plot_macro_tpcc.py  plot_macro_tpcc_hwcc.py  plot_macro_ycsb.py  plot_micro.py  plot_migration_policy.sh  plot_remote_txn_overhead.sh  plot_scalability.py  plot_scc.py  plot_scc_overhead.sh  plot_swcc.py  plot_tpcc.py  plot_tpcc_baseline.py  plot_tpcc_data_movement.py  plot_tpcc_logging.py  plot_tpcc_migration_policy.py  plot_tpcc_remote_txn_overhead.py  plot_tpcc_scc.py  plot_tpcc_scc_overhead.py  plot_tpcc_shortcut.py  plot_tpcc_sundial.py  plot_tpcc_twopl.py  plot_ycsb.py  plot_ycsb_baseline.py  plot_ycsb_custom.py  plot_ycsb_custom_remote_txn_overhead.py  plot_ycsb_data_movement.py  plot_ycsb_dynamic_data_movement.py  plot_ycsb_hwcc.py  (+7 more)
(+1721 files in other folders)
